--- a/src/brwyatt_web/pages/templates/landingpage.html
+++ b/src/brwyatt_web/pages/templates/landingpage.html
@@ -1,6 +1,7 @@
 {% extends base %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<p>Hello World</p>
-<p>Rendered from Jinja2!</p>
+Welcome to brwyatt.net! This is my little corner of the web! It's not much, but it is mine!
+
+There's not much here for now, but I'm working on it, and hope to add more soon!
 {% endblock %}
