Fix some formatting things

--- a/src/brwyatt_web/pages/templates/base.html
+++ b/src/brwyatt_web/pages/templates/base.html
@@ -33,7 +33,7 @@
         </div>
 		  </div>
 			<div id='footer'>
-				© {{ now().year }} Bryan Wyatt
+				&copy; {{ now().year }} Bryan Wyatt
 			</div>
 		</div>
   </body>
