--- a/src/brwyatt_web/pages/templates/base.html
+++ b/src/brwyatt_web/pages/templates/base.html
@@ -13,6 +13,8 @@
 
     <title>brwyatt.net - {% block title %}{% endblock %}</title>
 
+		<link rel="stylesheet" href="/css/global.css">
+
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({
