Play around with some of the CSS
Just testing things...

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-33472085-2"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		
-		  gtag('config', 'UA-33472085-2');
-		</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-33472085-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-33472085-2');
+    </script>
 
     <title>brwyatt.net - {% block title %}{% endblock %}</title>
 
-		<link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/global.css">
 
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({
               google_ad_client: "ca-pub-2946026056360727",
@@ -24,21 +23,20 @@
     </script>
   </head>
   <body>
-		<div id='viewport'>
+    <div id='viewport'>
       <div id='siteheader'>
         <h1>brwyatt.net</h1>
       </div>
-		  <div id='sitecontent'>
+      <div id='sitecontent'>
         <h2 id='pagetitle'>{{ self.title() }}</h2>
         <div id='pagecontent'>
           {% block content %}Undefined{% endblock %}
         </div>
-		  </div>
-			<div id='footer'>
-				&copy; {{ now().year }} Bryan Wyatt
-			</div>
-		</div>
+      </div>
+      <div id='footer'>
+        &copy; {{ now().year }} Bryan Wyatt
+      </div>
+    </div>
   </body>
 </html>
-
-{# <!-- vim: set ts=2 sw=2 sts=2: --> #}
+{# vim: set ts=2 sw=2 sts=2: #}
