--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,3 +1,13 @@
+div {
+	border: 2px;
+}
+
+div#viewport {
+	width: 800px;
+}
+
 div#siteheader h1 {
   text-align: center;
 }
+
+/* vim: set ts=2 sw=2 sts=2: */
