Add some padding and make the viewpane bigger

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,10 +1,11 @@
 div {
 	border: 2px solid;
+	padding: 4px;
 }
 
 div#viewport {
 	margin: auto;
-	width: 800px;
+	width: 1000px;
 }
 
 div#siteheader h1 {
