--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,14 @@
     </script>
   </head>
   <body>
-    <div id='viewport'>
+    <div id='viewpane'>
       <div id='siteheader'>
         <h1>brwyatt.net</h1>
       </div>
       <div id='sitecontent'>
-        <h2 id='pagetitle'>{{ self.title() }}</h2>
+        <div id='pagetitle'>
+          <h2>{{ self.title() }}</h2>
+        </div>
         <div id='pagecontent'>
           {% block content %}Undefined{% endblock %}
         </div>
