--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
       gtag('config', 'UA-33472085-2');
     </script>
 
-    <title>brwyatt.net - {% block title %}{% endblock %}</title>
+    <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="/css/global.css">
 
@@ -25,7 +25,7 @@
   <body>
     <div id='viewpane'>
       <div id='siteheader'>
-        <h1>brwyatt.net</h1>
+        <h1>Bryan Wyatt</h1>
       </div>
       <div id='sitecontent'>
         <div id='pagetitle'>
