--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,27 +1,34 @@
-div {
-	border: 2px solid;
-	padding: 4px;
-	margin: 1px;
+body {
+  background-color: #111111;
 }
 
 div#viewpane {
-	margin: auto;
-	width: 1000px;
+  margin: auto;
+  width: 1000px;
+}
+
+div#sitecontent {
+  background-color: white;
 }
 
 div#siteheader {
-	/* https://cssgradient.io/ */
-	background-image: radial-gradient(circle farthest-corner at 0% 0%, rgba(0,181,255,1) 0%, rgba(1,140,221,1) 7%, rgba(2,99,189,1) 22%, rgba(3,50,151,1) 51%, rgba(5,0,111,1) 90%, rgba(0,0,0,1) 100%);
+  /* https://cssgradient.io/ */
+  background-image: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 50%, rgba(5,0,111,1) 99%, rgba(0,0,0,1) 100%);
+  padding: 10px;
+  font-size: 40pt;
+  font-weight: bold;
 }
 
 div#siteheader h1 {
-  text-align: center;
+  text-align: left;
 }
 
 div#footer {
   text-align: center;
-	font-weight: lighter;
-	font-size: smaller;
+  font-weight: lighter;
+  font-size: smaller;
+  color: grey;
+  padding: 4px
 }
 
-/* vim: set ts=2 sw=2 sts=2: */
+/* vim: set ts=2 sw=2 sts=2 expandtab: */
