--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,11 @@
 
     <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/global.css"/>
+    {% if (event['stageVariables']['Stage'] in ['Beta', 'Alpha'] or 
+           event['queryStringParameters']['style_debug']) -%}
+      <link rel="stylesheet" href="/css/debug.css"/>
+    {%- endif %}
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
@@ -32,7 +36,9 @@
           <h2>{{ self.title() }}</h2>
         </div>
         <div id='pagecontent'>
-          {% block content %}Undefined{% endblock %}
+          {% block content %}
+            Undefined
+          {% endblock %}
         </div>
       </div>
       <div id='footer'>
@@ -41,4 +47,4 @@
     </div>
   </body>
 </html>
-{# vim: set ts=2 sw=2 sts=2: #}
+{# vim: set ts=2 sw=2 sts=2 expandtab: -#}
