Use different GA code per environment stage

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-33472085-2');
+      gtag('config', '{{ga_code}}');
     </script>
 
     <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
