--- a/static/css/global.css
+++ b/static/css/global.css
@@ -18,7 +18,7 @@ div#sitecontent {
 
 div#siteheader {
   /* https://cssgradient.io/ */
-  background-image: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 50%, rgba(5,0,111,1) 99%, rgba(0,0,0,1) 100%);
+  background-image: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 60%, rgba(17,17,17,1) 99%);
   padding: 10px;
   font-size: 35px;
   font-weight: bold;
