--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-33472085-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{gtag_id}}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', '{{ga_code}}');
+      gtag('config', '{{gtag_id}}');
     </script>
 
     <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="/css/global.css"/>
-    {% if (event['stageVariables']['Stage'] in ['Beta', 'Alpha'] or 
-           event['queryStringParameters']['style_debug']) -%}
+    {% if style_debug %}
       <link rel="stylesheet" href="/css/debug.css"/>
     {%- endif %}
 
