--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,5 +1,12 @@
+:root {
+  --palette-background: rgba(17,17,17,1);
+  /* https://cssgradient.io/ */
+  --blue-gradient: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 60%, var(--palette-background) 99%);
+}
+
 body {
-  background-color: #111111;
+  background-color: var(--palette-background);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 div {
@@ -17,8 +24,7 @@ div#sitecontent {
 }
 
 div#siteheader {
-  /* https://cssgradient.io/ */
-  background-image: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 60%, rgba(17,17,17,1) 99%);
+  background-image: var(--blue-gradient);
   padding: 10px;
   font-size: 35px;
   font-weight: bold;
