--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,12 +1,12 @@
 :root {
-  --nav-hover: radial-gradient(circle farthest-corner at 0% 0%, rgba(255,255,255,1) 0%, rgba(0,181,255,1) 3%, rgba(1,140,221,1) 5%, rgba(2,99,189,1) 20%, rgba(3,50,151,1) 60%, rgba(17,17,17,1) 99%);
+  --nav-hover: var(--blue-gradient)
 }
 
 div#navbar {
   margin: 0px;
   margin-left: 1px;
   padding: 0px;
-  background: #111111;
+  background: var(--palette-background);
 }
 
 div#navbar ul#nav {
@@ -14,9 +14,9 @@ div#navbar ul#nav {
   padding: 0px;
   float: left;
 	width: 100%;
-  border: 1px solid #111111;
-	border-width: 1px 0;
-  background: #111111;
+  border: 1px solid var(--palette-background);
+	border-width: 1px 0px;
+  background: var(--palette-background);
 }
 
 div#navbar ul#nav li {
@@ -27,45 +27,45 @@ div#navbar ul#nav li {
 
 div#navbar ul#nav a:link,
 div#navbar ul#nav a:visited {
-  color: #fff;
+  color: white;
   background: rgba(3,50,151,1);
   padding: 20px 40px 4px 10px;
   float: left;
 	width: auto;
-  border-right: 1px solid #111111;
+  border-right: 1px solid var(--palette-background);
   text-decoration: none;
-	font: bold 1em/1em Arial, Helvetica, sans-serif;
+	font: bold 1em/1em;
 	text-transform: uppercase;
-	text-shadow:  2px 2px 2px #111111;
+	text-shadow:  2px 2px 2px var(--palette-background);
 }
 
 div#navbar ul#nav li: first-child a {
-	border-left: 1px solid #FFFFFF;
+	border-left: 1px solid var(--palette-background);
 }
 
 div#navbar ul#nav a:hover,
 div#navbar ul#nav a:focus {
-	color: #fff;
+	color: white;
   background: var(--nav-hover);
 }
 
-div#navbar ul#nav li a,
-div#navbar ul#nav li a,
-div#navbar ul#nav li a {
+div#navbar ul#nav li.sel a,
+div#navbar ul#nav li.sel a,
+div#navbar ul#nav li.sel a {
   background: var(--nav-hover);
-  color: #fff;
+  color: white;
   text-shadow: none;
 }
 
-div#navbar ul#nav li a:hover,
-div#navbar ul#nav li a:hover,
-div#navbar ul#nav li a:hover {
+div#navbar ul#nav li.sel a:hover,
+div#navbar ul#nav li.sel a:hover,
+div#navbar ul#nav li.sel a:hover {
   background: var(--nav-hover);
 }
 
 div#navbar ul#nav a:active {
   background: var(--nav-hover);
-  color: #fff;
+  color: white;
 }
 
 /* vim: set ts=2 sw=2 sts=2 expandtab: */
