--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -13,9 +13,10 @@ div#navbar ul#nav {
   margin: 0px;
   padding: 0px;
   float: left;
-	width: 100%;
+  width: 100%;
   border: 1px solid var(--palette-background);
-	border-width: 1px 0px;
+  border-top: 0px;
+  border-width: 1px 0px;
   background: var(--palette-background);
 }
 
@@ -31,21 +32,21 @@ div#navbar ul#nav a:visited {
   background: rgba(3,50,151,1);
   padding: 20px 40px 4px 10px;
   float: left;
-	width: auto;
+  width: auto;
   border-right: 1px solid var(--palette-background);
   text-decoration: none;
-	font: bold 1em/1em;
-	text-transform: uppercase;
-	text-shadow:  2px 2px 2px var(--palette-background);
+  font: bold 1em/1em;
+  text-transform: uppercase;
+  text-shadow:  2px 2px 2px var(--palette-background);
 }
 
 div#navbar ul#nav li: first-child a {
-	border-left: 1px solid var(--palette-background);
+  border-left: 1px solid var(--palette-background);
 }
 
 div#navbar ul#nav a:hover,
 div#navbar ul#nav a:focus {
-	color: white;
+  color: white;
   background: var(--nav-hover);
 }
 
