Make nave rendering dynamic and add sel class

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,7 @@
         <h1>Bryan Wyatt</h1>
       </div>
       <div id='navbar'>
-        <ul id="nav">
-          <li id="nav-home"><a href="/">Home</a></li>
-          <li id="nav-about"><a href="/about">About</a></li>
-          <li id="nav-contact"><a href="/contact">Contact</a></li>
-        </ul>
+        {% include "nav.html" %}
       </div>
       <div id='sitecontent'>
         <div id='pagetitle'>
