Add test SPA nav function

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <!-- End Google Ads -->
 
     <!-- Site JS -->
+    <script type="text/javascript" src="/js/spa_nav.js"/></script>
     <!-- End Site JS -->
   </head>
   <body>
