Switch to embeded path, rather than this.href
`this.href` would end up putting the full URL into the function, which
was inconvenient for our needs.

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <ul id="nav">
   {% for name, path in nav_items.items() -%}
   <li{% if event.get('path', '').startswith(path) %} class="sel"{% endif %}>
-    <a href="{{path}}" onclick="spa_nav(this.href)">{{name}}</a>
+    <a href="{{path}}" onclick="spa_nav({{path}})">{{name}}</a>
   </li>
   {% endfor -%}
 </ul>
