Add Stage tag to rendered pages
Using a Span as it doesn't break the flow of other elements when
floated, so shouldn't interfere with the rest of the page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,13 @@
   <body>
     <div id='viewpane'>
       <div id='siteheader'>
+        {% if stage == 'Alpha' -%}
+        <span style="float: right; color: darkred;">ALPHA</span>
+        {% elif stage == 'Beta' -%}
+        <span style="float: right; color: darkgreen;">BETA</span>
+        {% elif stage == 'Gamma' -%}
+        <span style="float: right; color: indigo;">GAMMA</span>
+        {% endif -%}
         <h1>Bryan Wyatt</h1>
       </div>
       <div id='navbar'>
