Add some more (static) pages
... and kinda tweek the datastructure that holds them...

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends base %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<p>Welcome to brwyatt.net! This is my little corner of the web! It's not much, but it is mine!</p>
-<p>There's not much here for now, but I'm working on it, and hope to add more soon!</p>
+<p>Welcome to my little corner of the internet!</p>
+<p>This is where I keep some links to some of the things I do, and will probably put a bunch of random musings at some point when I get around to it. You can find links to my current projects or where to contact me (if you need to) by using the navigation menu above.</p>
 {% endblock %}
+{# vim: set ts=2 sw=2 sts=2 expandtab: -#}
