--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <!-- End Google Ads -->
 
     <!-- Site JS -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/spa_nav.js"/></script>
     <!-- End Site JS -->
   </head>
