--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
     <!-- End Google Ads -->
 
     <!-- Site JS -->
+    <script type="text/javascript">
+      const stage="{{stage}}";
+      const api="https://api.{{hostname}}";
+    </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/spa_nav.js"/></script>
     <!-- End Site JS -->
@@ -39,12 +43,8 @@
   <body>
     <div id='viewpane'>
       <div id='siteheader'>
-        {% if stage == 'Alpha' -%}
-        <span style="float: right; color: darkred;">ALPHA</span>
-        {% elif stage == 'Beta' -%}
-        <span style="float: right; color: darkgreen;">BETA</span>
-        {% elif stage == 'Gamma' -%}
-        <span style="float: right; color: indigo;">GAMMA</span>
+        {% if stage != 'Prod' -%}
+        <span style="float: right; color: white; background-color: {{stage_color}}; padding: 10px; border: 2px solid white;">{{stage}}</span>
         {% endif -%}
         <h1>Bryan Wyatt</h1>
       </div>
