--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
   {% for name, path in nav_items -%}
   {# pre-select the menu item if we're on the page or a sub page, but exclude / from sub pages -#}
   <li{% if browser_path == path or (path != '/' and browser_path.startswith(path))  %} class="sel"{% endif %}>
-    <a href="{{path}}" onclick="spa_nav('{{path}}')">{{name}}</a>
+    <a href="{{path}}" onclick="spa_nav('{{path}}'); return false;">{{name}}</a>
   </li>
   {% endfor -%}
 </ul>
