--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,7 @@
 <ul>
   <li><a href="https://twitter.com/brwyatt">Twitter</a></li>
   <li><a href="https://mastodon.social/@brwyatt">Mastodon / GNU Social</a></li>
+  <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
 </ul>
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
