--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <!-- Site JS -->
     <script type="text/javascript">
       const stage="{{stage}}";
-      const api="https://api.{{hostname}}";
+      const api="//{{apidomain}}";
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/spa_nav.js"/></script>
