--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,8 +1,7 @@
 <ul id="nav">
-  {% set browser_path = event.get('path', '') -%}
   {% for name, path in nav_items -%}
   {# pre-select the menu item if we're on the page or a sub page, but exclude / from sub pages -#}
-  <li{% if browser_path == path or (path != '/' and browser_path.startswith(path))  %} class="sel"{% endif %}>
+  <li{% if page_path == path or (path != '/' and page_path.startswith(path))  %} class="sel"{% endif %}>
     <a href="{{path}}" onclick="spa_nav('{{path}}'); return false;">{{name}}</a>
   </li>
   {% endfor -%}
