--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,9 +1,10 @@
 :root {
   --palette-background: rgba(17,17,17,1);
+  --palette-blue: rgba(2,99,189,1);
   --gradient-start: rgba(255,255,255,1) 0%;
   --gradient-stop1: rgba(0,181,255,1) 3%;
   --gradient-stop2: rgba(1,140,221,1) 5%;
-  --gradient-stop3: rgba(2,99,189,1) 20%;
+  --gradient-stop3: var(--palette-blue) 20%;
   --gradient-stop4: rgba(3,50,151,1) 60%;
   --gradient-end: var(--palette-background) 99%;
   --gradient-values: var(--gradient-start), var(--gradient-stop1), var(--gradient-stop2), var(--gradient-stop3), var(--gradient-stop4), var(--gradient-end);
