Add loading animation between pages

--- a/templates/css.html
+++ b/templates/css.html
@@ -1,6 +1,7 @@
 <!-- Site CSS -->
 <link rel="stylesheet" href="/css/global.css"/>
 <link rel="stylesheet" href="/css/nav.css"/>
+<link rel="stylesheet" href="/css/loading.css"/>
 {% if style_debug %}
   <link rel="stylesheet" href="/css/debug.css"/>
 {%- endif %}
