--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -4,66 +4,54 @@
 }
 
 div#navbar {
-  height: 41px;
+  display: inline-block;
   margin: 0px;
   margin-left: 1px;
   padding: 0px;
-  background: var(--palette-background);
+  width: 100%;
 }
 
 div#navbar ul#nav {
+  display: inline-block;
+  float: left;
   margin: 0px;
   padding: 0px;
-  float: left;
   width: 100%;
-  border: 1px solid var(--palette-background);
-  border-top: 0px;
-  border-width: 1px 0px;
-  background: var(--palette-background);
 }
 
 div#navbar ul#nav li {
-  display: inline;
-  padding: 0px;
+  display: inline-block;
+  float: left;
   margin: 0px;
+  border: 0px;
+  padding: 0px;
 }
 
 div#navbar ul#nav a {
+  display: inline-block;
   color: white;
   text-decoration: none;
   font-weight: bold;
   text-shadow:  2px 2px 2px var(--palette-background);
+  padding: 20px 40px 4px 10px;
 }
 
 div#navbar ul#nav a:link,
-div#navbar ul#nav a:visited {
-  background: var(--palette-blue);
-  padding: 20px 40px 4px 10px;
-  float: left;
-  width: auto;
-  border-right: 1px solid var(--palette-background);
+div#navbar ul#nav a:visited,
+div#navbar ul#nav a:focus {
 }
 
 div#navbar ul#nav li: first-child a {
-  border-left: 1px solid var(--palette-background);
 }
 
 div#navbar ul#nav a:hover,
-div#navbar ul#nav a:focus {
-  background: var(--nav-hover);
-}
-
-div#navbar ul#nav li.sel a {
-  background: var(--nav-current);
-}
-
 div#navbar ul#nav li.sel a:hover {
   background: var(--nav-hover);
 }
 
-div#navbar ul#nav a:active {
+div#navbar ul#nav a:active,
+div#navbar ul#nav li.sel a {
   background: var(--nav-current);
-  color: white;
 }
 
 /* vim: set ts=2 sw=2 sts=2 expandtab: */
