--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -29,11 +29,12 @@ div#navbar ul#nav li {
 
 div#navbar ul#nav a {
   display: inline-block;
-  color: white;
+  color: var(--palette-grey);
   text-decoration: none;
   font-weight: bold;
   text-shadow:  2px 2px 2px var(--palette-background);
   padding: 20px 40px 4px 10px;
+  border-left: 1px solid var(--palette-grey);
 }
 
 div#navbar ul#nav a:link,
@@ -41,17 +42,20 @@ div#navbar ul#nav a:visited,
 div#navbar ul#nav a:focus {
 }
 
-div#navbar ul#nav li: first-child a {
+div#navbar ul#nav li:first-child a {
+  border-left: 0px;
 }
 
 div#navbar ul#nav a:hover,
 div#navbar ul#nav li.sel a:hover {
   background: var(--nav-hover);
+  color: white;
 }
 
 div#navbar ul#nav a:active,
 div#navbar ul#nav li.sel a {
   background: var(--nav-current);
+  color: white;
 }
 
 /* vim: set ts=2 sw=2 sts=2 expandtab: */
