Fix to make the favicon work given current limits
Issue a redirect for the normal path, and reference the link in the
static S3 bucket.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     {% include "GoogleAnalytics.html" %}
     <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" href="https://static.brwyatt.net/favicon.ico" />
     {% include "css.html" %}
     {% include "GoogleAds.html" %}
     {% include "js.html" %}
