Update all core pages
Now a bunch of them actually have useful content!

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -7,6 +7,7 @@
   <li><a href="https://twitter.com/brwyatt">Twitter</a></li>
   <li><a href="https://mastodon.social/@brwyatt">Mastodon / GNU Social</a></li>
   <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
+  <li><a href="https://github.com/brwyatt/">GitHub</a></li>
 </ul>
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
