--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,5 +3,6 @@
 {% block content %}
 <p>Welcome to my little corner of the internet!</p>
 <p>This is where I keep some links to some of the things I do, and will probably put a bunch of random musings at some point when I get around to it. You can find links to my current projects or where to contact me (if you need to) by using the navigation menu above.</p>
+<p>I may end up doing something more with this site at some point in the future, maybe a blog? Who knows!</p>
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
