Add Keybase link

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -6,6 +6,7 @@
 <ul>
   <li><a href="https://twitter.com/brwyatt">Twitter</a></li>
   <li><a href="https://mastodon.social/@brwyatt">Mastodon / GNU Social</a></li>
+  <li><a href="https://keybase.io/brwyatt">Keybase</a></li>
   <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
   <li><a href="https://github.com/brwyatt/">GitHub</a></li>
 </ul>
