Add Telegram and Steam Community links

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -8,6 +8,8 @@
   <li><a href="https://keybase.io/brwyatt">Keybase</a></li>
   <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
   <li><a href="https://mastodon.social/@brwyatt">Mastodon / GNU Social</a></li>
+  <li><a href="https://steamcommunity.com/id/brwyatt">Steam Community</a></li>
+  <li><a href="https://t.me/brwyatt">Telegram</a></li>
   <li><a href="https://twitter.com/brwyatt">Twitter</a></li>
 </ul>
 {% endblock %}
