Add Curious Cat contact link

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -4,6 +4,7 @@
 <p>In general, I can pretty much be found using the name "brwyatt" on most platforms, though I do have a habit of using "DuneCat" on the rare occasions I play games online.</p>
 <p>Heres a list of some of my more frequent/active social accounts:</p>
 <ul>
+  <li><a href="https://curiouscat.me/brwyatt">Curious Cat</a></li>
   <li><a href="https://github.com/brwyatt/">GitHub</a></li>
   <li><a href="https://keybase.io/brwyatt">Keybase</a></li>
   <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
