--- a/templates/js.html
+++ b/templates/js.html
@@ -5,5 +5,6 @@
 </script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/spa_nav.js"/></script>
+<script type="text/javascript" src="/js/clicktrack.js"/></script>
 <!-- End Site JS -->
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
