--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    {% include "GooglePublisherTag.html" %}
     {% include "GoogleAnalytics.html" %}
     <title>Bryan Wyatt - {% block title %}{% endblock %}</title>
     <link rel="shortcut icon" href="https://static.brwyatt.net/favicon.ico" />
