--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -4,14 +4,9 @@
 <p>In general, I can pretty much be found using the name "brwyatt" on most platforms, though I do have a habit of using "DuneCat" on the rare occasions I play games online.</p>
 <p>Heres a list of some of my more frequent/active social accounts:</p>
 <ul>
-  <li><a href="https://curiouscat.me/brwyatt">Curious Cat</a></li>
-  <li><a href="https://github.com/brwyatt/">GitHub</a></li>
-  <li><a href="https://keybase.io/brwyatt">Keybase</a></li>
-  <li><a href="https://www.linkedin.com/in/brwyatt/">LinkedIn</a></li>
-  <li><a href="https://mastodon.social/@brwyatt">Mastodon / GNU Social</a></li>
-  <li><a href="https://steamcommunity.com/id/brwyatt">Steam Community</a></li>
-  <li><a href="https://t.me/brwyatt">Telegram</a></li>
-  <li><a href="https://twitter.com/brwyatt">Twitter</a></li>
+{%- for link_text, link_url in contact_links.items() %}
+  <li><a rel="me" href="{{ link_url }}">{{ link_text }}</a></li>
+{%- endfor %}
 </ul>
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
