--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -8,6 +8,7 @@
   <li><a rel="me" href="{{ link_url }}">{{ link_text }}</a></li>
 {%- endfor %}
 </ul>
-<h1>XSRF Token Test: {{ gen_xsrf_token('test') }}</h1>
+<p>Alternatively, use the form below to shoot me an email:</p>
+{% include "forms/emailcontact.html" %}
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
