Just a little progress
... I'm really not happy with this. I think, in general, I'm mostly
unhappy with the project layout as a whole. It has a lot of cool ideas,
but I think I've moved beyond in a lot of ways, and know better ways to
do what I was trying to do......

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -9,6 +9,6 @@
 {%- endfor %}
 </ul>
 <p>Alternatively, use the form below to shoot me an email:</p>
-{% include "forms/emailcontact.html" %}
+{% include "forms/contact.html" %}
 {% endblock %}
 {# vim: set ts=2 sw=2 sts=2 expandtab: -#}
