Add Ophiuchus to Projects page

--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -3,6 +3,13 @@
 {% block content %}
 <p>Most of my projects can be found on my <a href="https://github.com/brwyatt">GitHub</a>, but I also keep a bunch of random junk on there, so hopefully I can link to and point out some of my favorites (or most useful) here.</p>
 
+<h3>Ophiuchus</h3>
+<p>Library for creating, building, and deploying serverless websites to AWS. Currently still in early development, based on a lot of the learnings from building this website on AWS serverless services.</p>
+
+<ul>
+  <li><a href="https://github.com/brwyatt/Ophiuchus">GitHub Repo</a></li>
+</ul>
+
 <h3>smartthings_logging</h3>
 <p>A fairly simple project with the goal/intent of pulling Samsung SmartThings sensor data into CloudWatch. CloudWatch Metrics are created for each sensor datasource and can be graphed to see historical data and trends. Recently updated to work in Lambda, and also leverage AWS Serverless Application Model with automatic deployments through CodePipeline.</p>
 
